--- a/front-end/src/component/Admin/sidebar.css
+++ b/front-end/src/component/Admin/sidebar.css
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
   padding: 4rem 0;
+  overflow: hidden;
+  width: 100%;
+  margin-top: 30%;
+  /* z-index:5;
+  position: absolute; */
 }
 
 .sidebar > a:first-child {
