--- a/front-end/src/component/User/Usercss/LoginSignUp.css
+++ b/front-end/src/component/User/Usercss/LoginSignUp.css
@@ -10,11 +10,16 @@
   top: 0%;
   left: 0;
 }
+.loginEmail,
+.loginPassword{
+  color:red;
+  display: inline !important;
+}
 
 .signUpName,
 .signUpEmail,
 .signUpPassword {
-  color: blue;
+  color:red;
   display: inline !important;
 }
 
